Bug 345277, When "Certificate Viewer" is shut, the object leaks r=rrelyea