security/manager/ssl/src/nsVerificationJob.h
@@ -50,6 +50,7 @@
 class nsBaseVerificationJob
 {
 public:
+  virtual ~nsBaseVerificationJob() {}
   virtual void Run() = 0;
 };
 
